--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,20 @@
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+Images/i3.jpg filter=lfs diff=lfs merge=lfs -text
+Images/icon[[:space:]]theme.png filter=lfs diff=lfs merge=lfs -text
+Images/windowchef.png filter=lfs diff=lfs merge=lfs -text
+Images/xfce-412.png filter=lfs diff=lfs merge=lfs -text
+Images/bspwm.png filter=lfs diff=lfs merge=lfs -text
+Images/GTK[[:space:]]Themes.jpg filter=lfs diff=lfs merge=lfs -text
+Images/Lxde-spin-fedora12.png filter=lfs diff=lfs merge=lfs -text
+Images/synapse.png filter=lfs diff=lfs merge=lfs -text
+Images/awesomewm.png filter=lfs diff=lfs merge=lfs -text
+Images/xmonad.png filter=lfs diff=lfs merge=lfs -text
+Images/conky.png filter=lfs diff=lfs merge=lfs -text
+Images/Gnome-3-Desktop.png filter=lfs diff=lfs merge=lfs -text
+Images/Icewm-default.jpg filter=lfs diff=lfs merge=lfs -text
+Images/KDE-Plasma-Desktop.png filter=lfs diff=lfs merge=lfs -text
+Images/lemonbar.png filter=lfs diff=lfs merge=lfs -text
+Images/rofi.jpg filter=lfs diff=lfs merge=lfs -text
+Images/tint2.png filter=lfs diff=lfs merge=lfs -text
